# workipy

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/workipy/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
